--- a/css/cover.css
+++ b/css/cover.css
@@ -92,7 +92,6 @@ body {
   padding: 30px;
 }
 
-
 /*
  * Header
  */
@@ -138,7 +137,6 @@ body {
   }
 }
 
-
 /*
  * Cover
  */
@@ -150,7 +148,6 @@ body {
   padding: 10px 20px;
   font-weight: bold;
 }*/
-
 
 /*
  * Footer
@@ -194,4 +191,12 @@ body {
   .cover-container {
     width: 700px;
   }
+}
+
+#profil{
+  position: absolute;
+  width: 225px;
+  height: 200px;
+  top: 263px;
+  left: 180px;
 }
